--- a/e-commerce/styles.css
+++ b/e-commerce/styles.css
@@ -334,3 +334,63 @@ header .header-icon a{
     width: 300px;
     border: 1px solid var(--clr-main);
 }
+
+
+
+/* ========== CATEGORIES ========== */
+.categories-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px 25px;
+}
+.category:last-child {
+    grid-column: 1 / span 2;
+    justify-self: center;
+}
+.category{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--clr-main);
+}
+.category img{
+    width: 250px;
+    height: 350px;
+}
+.category:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+.category:hover::before{
+    opacity: 1;
+}
+.category h2,
+.category button {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: var(--clr-bg);
+}
+.btn-category {
+    background: none;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    padding: 10px 20px;
+    font-size: 18px;
+}
+.category i {
+    transition: transform 0.2s;
+}
+.category:hover i{
+    transform: translateX(5px);
+}
+  
