--- a/e-commerce/styles.css
+++ b/e-commerce/styles.css
@@ -209,6 +209,9 @@ header .fa-bars{
 
 
 /* ========== HOME ========== */
+main{
+    overflow-x: hidden;
+}
 .home {
     min-height: 100vh;
     width: 100%;
@@ -264,19 +267,8 @@ header .fa-bars{
     transform: translateY(-50%);
 }
 .featured i:hover {
-    animation: bounce 0.5s ease infinite;
+    color: var(--clr-txt);
 } 
-@keyframes bounce {
-    0% {
-      transform: translateY(-50%);
-    }
-    50% {
-      transform: translateY(-55%);
-    }
-    100% {
-      transform: translateY(-50%);
-    }
-}
 .featured i:first-child {
     left: -23px;
 }  
@@ -620,6 +612,30 @@ footer .section-title h2 {
         display: flex;
     }
 
+    .featured-bags .bags-grid{
+        grid-template-columns: 1fr;
+    }
+    .featured-bags .bags-grid img{
+        width: 100%;
+    }
+    .categories-container{
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+    .category img{
+        width: 220px;
+    }
+    .category:last-child {
+        grid-column: 1;
+    }
+    .onsale-content{
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 15px;
+    }
+    .onsale-content .sale-tag{
+        right: 100px;
+    }
     .footer-content{
         grid-template-columns: 1fr;
     }
