--- a/e-commerce/styles.css
+++ b/e-commerce/styles.css
@@ -139,13 +139,10 @@ section .section-title p{
 .nav{
     background-color: var(--clr-bg);
 }
-/* Add a new CSS class for the white background */
 header.navbar-white {
     background-color: var(--clr-bg);
 }
-/* Remove the background color transition for smoother effect */
 header {
-/* Existing styles */
     transition: padding .34s ease-in-out;
 }  
 header{
@@ -185,7 +182,7 @@ header .navbar li a::before{
     left: 0;
     bottom: 3px;
     width: 100%;
-    height: 8px;
+    height: 5px;
     z-index: -1;
     transition: all .3s ease-in-out;
 
@@ -532,14 +529,12 @@ footer .section-title h2 {
 /************************************************** NEW PAGE */
 /* =================================================================================================================*/
 .new-clothes, .new-bags{
-    padding: 100px 0%;
+    padding: 0%;
 }
 .new-title {
     position: relative;
-    margin-top: 20px;
     align-items: center;
     overflow: hidden;
-    padding-bottom: 50px;
 }
 .new-title h1 {
     position: absolute;
@@ -557,7 +552,6 @@ footer .section-title h2 {
 .new-title-pics {
     display: flex;
     overflow-x: hidden;
-    margin-top: 20px; /* Adjust as needed */
 }
 .new-title-pics img {
     height: 300px;
@@ -565,6 +559,50 @@ footer .section-title h2 {
     margin-right: -5px; /* Remove space between images */
     filter: brightness(50%); /* Apply the black shadow tint */
 }
+.count{
+    font-family: 'Roboto', sans-serif;
+}
+.new-container{
+    padding: 100px 14%;
+    background-color: var(--clr-lightergrey);
+}
+.pagination{
+    display: flex;
+    align-items: center;
+    background: transparent;
+    color: var(--clr-main);
+    padding: 10px 40px;
+    border-radius: 4px;
+    justify-content: center;
+}
+.pagination ul{
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
+.pagination ul li{
+    padding: 10px;
+    cursor: pointer;
+    font-weight: 600;
+}
+.pagination ul li:hover{
+    border: 1px solid var(--clr-main);
+    border-radius: 2px;
+}
+.pagination ul li.active{
+    color: var(--clt-txt);
+}
+.btn1, .btn2{
+    background-color: transparent;
+    border: none;
+    color: var(--clr-main);
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 2px;
+}
+.btn1:hover, .btn2:hover{
+    border: 1px solid var(--clr-main);
+}
 
 
 
@@ -573,51 +611,49 @@ footer .section-title h2 {
 
 
 
-
-
-/* Add a media query for smaller screens */
-@media (max-width: 1200px) {
+/* =================================================================================================================*/
+/************************************************** MEDIA QUERY*/
+/* =================================================================================================================*/
+@media (max-width: 1200px){
+    section{
+        padding: 100px 8%;
+    }
     header .navbar {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      background-color: var(--clr-bg);
-      padding: 20px;
-      position: fixed;
-      top: 70px; /* Adjust as needed */
-      left: 0;
-      right: 0;
-      transition: all .34s ease-in-out;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--clr-bg);
+        padding: 20px;
+        position: fixed;
+        top: 70px; /* Adjust as needed */
+        left: 0;
+        right: 0;
+        transition: all .34s ease-in-out;
     }
-  
     header .navbar li {
-      margin-bottom: 15px; /* Adjust as needed */
+        margin-bottom: 15px; /* Adjust as needed */
     }
-  
     header .navbar li a {
-      padding: 10px;
-      font-size: 1.2rem;
-      text-align: center;
-      color: var(--clr-txt);
+        padding: 10px;
+        font-size: 1.2rem;
+        text-align: center;
+        color: var(--clr-txt);
     }
-  
     header .header-icon .fa-bars {
-      display: inline-block;
-      font-size: 1.4rem;
-      cursor: pointer;
-      color: var(--clt-txt);
-      margin-left: 10px; /* Adjust as needed */
+        display: inline-block;
+        font-size: 1.4rem;
+        cursor: pointer;
+        color: var(--clt-txt);
+        margin-left: 10px; /* Adjust as needed */
     }
     header.show .navbar{
         display: flex;
     }
-
+      
     .featured-bags .bags-grid{
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
     }
-    .featured-bags .bags-grid img{
-        width: 100%;
-    }
+
     .categories-container{
         grid-template-columns: 1fr;
         gap: 15px;
@@ -627,17 +663,46 @@ footer .section-title h2 {
     }
     .category:last-child {
         grid-column: 1;
+        width: 100%;
     }
+
     .onsale-content{
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         text-align: center;
         gap: 15px;
     }
+
+    .footer-content{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (max-width:900px){
+    .onsale-content{
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        gap: 15px;
+    }
+    .onsale-content img{
+        width: 80%;
+    }
     .onsale-content .sale-tag{
-        right: 100px;
+        right: 40px;
+    }
+}
+@media (max-width: 800px) {
+    .featured-bags .bags-grid{
+        grid-template-columns: 1fr;
+    }
+    .featured-bags .bags-grid img{
+        width: 100%;
     }
     .footer-content{
         grid-template-columns: 1fr;
     }
 }
-  
+@media (max-width:600px){
+    .onsale-content{
+        grid-template-columns: 1fr;
+        padding: 0 70px;
+    }
+}  
