--- a/e-commerce/styles.css
+++ b/e-commerce/styles.css
@@ -528,6 +528,9 @@ footer .section-title h2 {
 /* =================================================================================================================*/
 /************************************************** NEW PAGE */
 /* =================================================================================================================*/
+.nav{
+    background-color: var(--clr-bg);
+}
 .new-clothes, .new-bags{
     padding: 0%;
 }
@@ -617,6 +620,7 @@ footer .section-title h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 .clothes-item img{
     height: 360px;
@@ -673,6 +677,65 @@ footer .section-title h2 {
     line-height: 1.6;
 }
 
+
+
+
+
+
+/* =================================================================================================================*/
+/************************************************** Clothing & bags Pages*/
+/* =================================================================================================================*/
+.hide{
+    display: none;
+}
+.clothing-categories{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    text-align: center;
+}
+.category-btn{
+    width: 200px;
+    height: 50px;
+    border: 3px solid var(--clr-main);
+    border-radius: 5px;
+    color: var(--clr-bg);
+    font-size: 1.1rem;
+    font-weight: 700;
+    cursor: pointer;
+    background-color: rgba(200, 129, 95, 0.7);
+}
+.category-btn:hover{
+    background-color: rgba(200, 129, 95, 0.4);
+    border: none;
+    color: var(--clr-txt);
+}
+.bags-categories{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+}
+.clothing-items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+    text-align: center;
+    padding: 50px 10%;
+}
+.clothing-item{
+    border: 1px solid var(--clr-main);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.clothing-item img{
+    padding: 5px 0 5px;
+    width: 290px;
+    height: 400px;
+}
 
 
 
