--- a/e-commerce/styles.css
+++ b/e-commerce/styles.css
@@ -200,9 +200,10 @@ header .header-icon a{
     color: var(--clt-txt);
     font-size: 1.2rem;
 }
-header .fa-bars{
+header button {
     display: none;
 }
+
 
 
 /* ========== HOME ========== */
@@ -767,6 +768,60 @@ footer .section-title h2 {
     margin-bottom: -50px;
 }
 
+
+
+
+
+
+/* =================================================================================================================*/
+/************************************************** ABOUT PAGE*/
+/* =================================================================================================================*/
+.about-image {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Adjust the height as needed */
+    background-color: var(--clr-lightergrey);
+    overflow: hidden;
+    border-radius: 0 0 50% 50%;
+}
+.about-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 400px;
+}
+.about-section{
+    padding: 100px 14%;
+}
+.about-section h1{
+    text-align: center;
+    margin: -30px;
+    padding-bottom: 100px;
+}
+.about-section p{
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    line-height: 1.6;
+    padding-bottom: 100px;
+}
+.about-section .skills{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.about-section .skills span{
+    color: var(--clr-main);
+    font-weight: 600;
+}
+
+
+
+
+
 /* =================================================================================================================*/
 /************************************************** MEDIA QUERY*/
 /* =================================================================================================================*/
@@ -775,37 +830,54 @@ footer .section-title h2 {
         padding: 100px 8%;
     }
     header .navbar {
-        display: none;
+        position: absolute;
         flex-direction: column;
-        align-items: center;
-        background-color: var(--clr-bg);
-        padding: 20px;
-        position: fixed;
-        top: 70px; /* Adjust as needed */
-        left: 0;
+        top: 100%;
         right: 0;
-        transition: all .34s ease-in-out;
+        width: 12rem;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 0;
+        display: none;
     }
     header .navbar li {
-        margin-bottom: 15px; /* Adjust as needed */
+        width: 100%;
+        height: 4.5rem;
+        display: flex;
+        align-items: center;
+        box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
+        background: var(--clr-bg);
+        border-top: 1px solid var(--clr-main);
     }
     header .navbar li a {
-        padding: 10px;
-        font-size: 1.2rem;
-        text-align: center;
-        color: var(--clr-txt);
+        border-radius: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--clr-bg);
+        padding: 0 2rem;
+        display: flex;
+        align-items: center;
     }
-    header .header-icon .fa-bars {
+    header .navbar li a:hover{
+        color: var(--clr-main);
+    }
+    header button {
         display: inline-block;
-        font-size: 1.4rem;
-        cursor: pointer;
+        font-size: 1.5rem;
+        background: transparent;
         color: var(--clt-txt);
-        margin-left: 10px; /* Adjust as needed */
+        cursor: pointer;
+        border: none;
+    }
+    header{
+        position: relative;
+    }
+    header button#close__nav-btn {
+        display: none;
     }
     header.show .navbar{
         display: flex;
     }
-      
     .featured-bags .bags-grid{
         grid-template-columns: 1fr 1fr;
     }
@@ -893,6 +965,17 @@ footer .section-title h2 {
     }
     .clothing-items, .bags-items{
         padding: 100px 3%;
+    }
+
+    /* about page */
+    .about-image{
+        border-radius: 0 0 30% 30%;
+    }
+    .about-section .skills{
+        flex-direction: column;
+    }
+    .about-section .skills span{
+        padding-bottom: 50px;
     }
 }
 @media (max-width:700px){
