--- a/business-consulting/styles.css
+++ b/business-consulting/styles.css
@@ -5,3 +5,53 @@
     list-style: none;
     text-decoration: none;
 }
+:root{
+    --clr-bg: #001233;
+    --clr-secondary: #123300;
+    --clr-txt: #B3B8C2;
+    --clr-gray1: #737578;
+}
+
+
+
+/* ========================== General ========================== */
+body{
+    background-color: var(--clr-bg);
+    color: var(--clr-txt);
+}
+.container{
+    padding: 0 14%;
+}
+
+
+/* ========================== NAVBAR ========================== */
+.nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+}
+.nav .logo h2{
+    color: var(--clr-gray1);
+}
+.nav .nav-items{
+    display: flex;
+    flex-direction: row;
+}
+.nav .nav-items a{
+    color: var(--clr-txt);
+}
+.nav .btn{
+    color: var(--clr-txt);
+    padding: 15px 30px;
+    background-color: var(--clr-secondary);
+    border: 1px solid var(--clr-secondary);
+    border-radius: 30px;
+    font-weight: 600;
+}
+.nav .btn:hover{
+    color: var(--clr-secondary);
+    background-color: transparent;
+    border: 3px solid var(--clr-secondary);
+}
