--- a/business-consulting/styles.css
+++ b/business-consulting/styles.css
@@ -35,12 +35,23 @@ body{
 .nav .logo h2{
     color: var(--clr-gray1);
 }
+.nav .logo h2 span{
+    background-color: var(--clr-secondary);
+    color: var(--clr-txt);
+    text-transform: uppercase;
+}
 .nav .nav-items{
     display: flex;
     flex-direction: row;
 }
 .nav .nav-items a{
     color: var(--clr-txt);
+    padding: 15px;
+    text-transform: capitalize;
+}
+.nav .nav-items a:hover{
+    color: var(--clr-gray1);
+    font-weight: 700;
 }
 .nav .btn{
     color: var(--clr-txt);
