--- a/business-consulting/styles.css
+++ b/business-consulting/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +10,8 @@
 :root{
     --clr-bg: #001233;
     --clr-secondary: #123300;
+    --clr-third: #FFA33D;
+    --clr-white: #fff;
     --clr-txt: #B3B8C2;
     --clr-gray1: #737578;
 }
@@ -18,9 +22,11 @@
 body{
     background-color: var(--clr-bg);
     color: var(--clr-txt);
+    font-family: 'Roboto', sans-serif;;
 }
 .container{
-    padding: 0 14%;
+    padding: 100px 14%;
+    overflow: hidden;
 }
 
 
@@ -30,14 +36,15 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 0 14%;
     height: 70px;
 }
 .nav .logo h2{
-    color: var(--clr-gray1);
+    color: var(--clr-txt);
 }
 .nav .logo h2 span{
     background-color: var(--clr-secondary);
-    color: var(--clr-txt);
+    color: var(--clr-white);
     text-transform: uppercase;
 }
 .nav .nav-items{
@@ -50,19 +57,60 @@ body{
     text-transform: capitalize;
 }
 .nav .nav-items a:hover{
-    color: var(--clr-gray1);
+    color: var(--clr-third);
     font-weight: 700;
 }
-.nav .btn{
-    color: var(--clr-txt);
+.btn{
     padding: 15px 30px;
     background-color: var(--clr-secondary);
-    border: 1px solid var(--clr-secondary);
     border-radius: 30px;
     font-weight: 600;
 }
-.nav .btn:hover{
-    color: var(--clr-secondary);
-    background-color: transparent;
-    border: 3px solid var(--clr-secondary);
+.btn a{
+    color: var(--clr-txt);
+    text-transform: capitalize;
+}
+.btn:hover a{
+    color: var(--clr-white);
+}
+.btn:hover{
+    background: #1b4405;
+}
+
+/* ========================== Home ========================== */
+.home{
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+}
+.home .home-txt{
+    flex: 0 50%;
+    width: 50%;
+}
+.home .home-txt h1{
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: var(--clr-white);
+    line-height: 2.5;
+}
+.home .home-txt h1 span{
+    color: var(--clr-third);
+    text-transform: uppercase;
+}
+.home .home-txt p{
+    line-height: 1.5;
+    color: var(--clr-txt);
+    font-size: 0.9rem;
+}
+.btn-page{
+    width: fit-content;
+    margin-top: 60px;
+}
+.home .home-img{
+    flex: 0 50%;
+    width: 50%;
+}
+.home .home-img img{
+    width: 350px;
+    height: 350px;
 }
