--- a/myblog/styles.css
+++ b/myblog/styles.css
@@ -27,6 +27,10 @@ h2{
     color: var(--clr-accent);
     padding: 35px 5px;
 }
+
+
+
+
 /* ============================ Header ============================ */
 header{
     padding: 20px 25%;
@@ -36,8 +40,28 @@ header{
     justify-content: space-between;
 }
 header .logo{
-    font-weight: 700;
     text-transform: capitalize;
+    position: relative;
+    display: inline-block;
+}
+header .logo span {
+    position: absolute;
+    top: 50%;
+    left: 8%;
+    transform: translate(-50%, -50%);
+    width: 40px; /*circle size*/
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--clr-accent);
+    z-index: -1;
+}
+header .logo a {
+    position: relative;
+    margin: 0;
+    z-index: 1;
+    font-weight: 700;
+    font-size: 2rem;
+    color: var(--clr-black);
 }
 header .nav{
     display: flex;
@@ -90,4 +114,43 @@ footer .socials a{
 }
 footer .socials a:hover{
     color: var(--clr-grey);
+}
+
+
+/* ============================ Home Page ============================ */
+.home-content{
+    padding-top: 100px;
+}
+.home-content h1{
+    line-height: 3;
+}
+.home-content p{
+    line-height: 2;
+}
+.home-content p a{
+    position: relative;
+    color: var(--clr-txt);
+}
+.home-content p a::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--clr-accent);
+}
+.home-content p a:hover{
+    color: var(--clr-accent);
+}
+.home-content p a:hover::after{
+    background-color: var(--clr-txt);
+}
+.home-content p .circle {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: var(--clr-accent);
+    margin: 0 25px;
 }
