--- a/myblog/styles.css
+++ b/myblog/styles.css
@@ -49,12 +49,23 @@ p{
 
 
 /* ============================ Header ============================ */
+header button {
+    display: none;
+}
 header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--clr-bg) !important;
     padding: 20px 25%;
+    z-index: 1001;
+}  
+.header-wrapper{
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
 }
 header .logo{
     text-transform: capitalize;
@@ -236,4 +247,97 @@ footer .socials a:hover{
     font-weight: 700;
     text-align: center;
     text-transform: capitalize;
+}
+
+
+
+
+/* ============================ Media queries ============================ */
+@media (max-width: 1024px){
+    .container{
+        padding: 50px 16%;
+    }
+    header{
+        padding: 20px 16%;
+    }
+    .works{
+        gap: 40px;
+    }
+}
+@media (max-width: 900px){
+    .container{
+        padding: 50px 10%;
+    }
+    header{
+        padding: 20px 10%;
+    }
+}
+@media (max-width: 830px){
+    .works{
+        gap: 15px;
+    }
+}
+@media (max-width: 800px){
+    .works{
+        grid-template-columns: 1fr;
+        gap: 40px;
+        justify-items: center;
+    }
+    .works .work-item img{
+        width: 100%;
+        height: 100%;
+    }
+}
+@media (max-width: 650px){
+    header button {
+        display: inline-block;
+        font-size: 1.5rem;
+        background: transparent;
+        color: var(--clt-txt);
+        cursor: pointer;
+        border: none;
+    }
+    header button#close__nav-btn {
+        display: none;
+        color: var(--clr-accent);
+    }
+    header.show .nav{
+        display: flex;
+    }
+    header .nav {
+        background-color: red;
+        position: absolute;
+        flex-direction: column;
+        top: 100%;
+        right: 15%;
+        width: 12rem;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 0;
+        display: none;
+    }
+    header .nav li {
+        width: 100%;
+        height: 4.5rem;
+        display: flex;
+        align-items: center;
+        background: var(--clr-bg);
+        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    }
+    header .nav li a {
+        border-radius: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--clr-bg);
+        padding: 0 2rem;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid var(--clr-grey);
+        border-bottom-width: 120%;
+    }
+    header .nav li a:hover::after, 
+    header .nav li a.active::after {
+        background-color: transparent;
+    }
+
 }
