--- a/myblog/styles.css
+++ b/myblog/styles.css
@@ -21,7 +21,7 @@ body{
     background-color: var(--clr-bg);
 }
 .container{
-    padding: 50px 25%;
+    padding: 50px 20%;
 }
 h2{
     color: var(--clr-accent);
@@ -58,7 +58,7 @@ header{
     left: 0;
     width: 100%;
     background-color: var(--clr-bg) !important;
-    padding: 20px 25%;
+    padding: 20px 20%;
     z-index: 1001;
 }  
 .header-wrapper{
@@ -206,6 +206,39 @@ footer .socials a:hover{
     color: var(--clr-txt);
 }
 
+#blog-modal {
+    display: none; /* Hide the modal by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+    z-index: 9999;
+    overflow-y: scroll; /* Enable vertical scrolling if content overflows */
+  }
+  
+  .modal-content {
+    position: relative;
+    width: 80%;
+    max-width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px;
+  }
+  
+  .modal-header {
+    margin-bottom: 10px;
+  }
+  
+  .modal-header h2 {
+    margin-top: 0;
+  }
+  
+  .modal-body {
+    max-height: 70vh; /* Limit the height of the body content to enable scrolling */
+    overflow-y: auto;
+  }
 
 
 /* ============================ Works Page ============================ */
@@ -222,6 +255,7 @@ footer .socials a:hover{
 .works .work-item img{
     width: 350px;
     border-radius: 10px;
+    transition: 1s linear;
 }
 .overlay {
     display: flex;
@@ -248,8 +282,36 @@ footer .socials a:hover{
     text-align: center;
     text-transform: capitalize;
 }
-
-
+.work-content .popup-img{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%;
+    z-index: 1003;
+    display: none;
+}
+.work-content .popup-img span{
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 40px;
+    font-weight: bolder;
+    color: #F2F2F2;
+    cursor: pointer;
+    z-index: 100;
+}
+.work-content .popup-img img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid #F2F2F2;
+    border-radius: 5px;
+    width: 750px;
+    object-fit: cover;
+}
 
 
 /* ============================ Media queries ============================ */
@@ -286,6 +348,9 @@ footer .socials a:hover{
     .works .work-item img{
         width: 100%;
         height: 100%;
+    }
+    .work-content .popup-img img{
+        width: 95%;
     }
 }
 @media (max-width: 650px){
